# nextbrain-utils

./: README.md  pyproject.toml
nextbrain_utils/: __init__.py  __main__.py  cli.py  combine_hemis.py  io.py  lut.py  simplify.py  to_allen.py  to_aseg.py  to_supersynth.py
nextbrain_utils/lut/: ASegLUT.txt  AllenBrainOntology.json  AllenBrainOntologyDev.json  NextBrainLUT.txt  NextBrainLabels.yaml  NextBrainToASeg.yaml  NextBrainToSuperSynth.yaml  SuperSynthCerebrumLUT.txt  SuperSynthExVivoLUT.txt  SuperSynthWholeLUT.txt  SynthSegLUT.txt
